syntax = "proto3";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (AuthResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc GetUserById (GetUserRequest) returns (UserResponse);
  rpc UpdateProfile (UpdateProfileRequest) returns (UserResponse);
  rpc SearchUsers (SearchUsersRequest) returns (SearchUsersResponse);
  rpc GetUsersByIds (GetUsersByIdsRequest) returns (UsersListResponse);
}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  string fullName = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string userId = 2;
  string email = 3;
  string username = 4;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message LogoutRequest {
  string userId = 1;
}

message LogoutResponse {
  bool success = 1;
}

message GetUserRequest {
  string userId = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string username = 3;
  string fullName = 4;
  string avatar = 5;
  string createdAt = 6;
}

message AuthResponse {
  UserResponse user = 1;
  string accessToken = 2;
  string refreshToken = 3;
}

message UpdateProfileRequest {
  string userId = 1;
  string fullName = 2;
  string bio = 3;
  string avatar = 4;
}

message SearchUsersRequest {
  string query = 1;
  int32 page = 2;
  int32 limit = 3;
}

message SearchUsersResponse {
  repeated UserResponse users = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 total = 4;
}

message GetUsersByIdsRequest {
  repeated string userIds = 1;
}

message UsersListResponse {
  repeated UserResponse users = 1;
}
